overhaul of project

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <body>
 <div class="container">
   <h1>Galactic Age </h1>
-    <form id="date">
+    <form id="galaticage">
       <div class="form-group">
         <label for="birthdate">Please enter your birthdate</label>
         <input class = "form-control" id="birthdate" name="birthdate" type="date" required><br>
@@ -15,7 +15,7 @@
   <p>You entered this birthdate: <span id="birthdateShow"></span></p>
 
   <h3>Your age around the Solar System</h3>
-  <p>Your current age on Earth is: <span id="ageEarth"></span> years.</p>
+  
   <p>Your current age on Mercury is: <span id="ageMercury"></span></p>
   <p>Your current age on Venus is: <span id="ageVenus"></span></p>
   <p>Your current age on Mars is: <span id="ageMars"></span></p>
